--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,8 +26,6 @@
 
     </LinearLayout>
 
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -51,5 +49,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Send"/>
+
+    <Button
+        android:id="@+id/buttonMes"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Send Via Message"/>
 
 </LinearLayout>
